[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datacamp"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
bokeh = "^3.2.2"
ipykernel = "^6.25.2"
jupyter-ai = "^2.2.0"
jupyterlab = "^4.0.5"
jupyterlab-git = "^0.42.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
openai = "^0.28.0"
pandas = "^2.1.0"
python = "^3.11.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}

[tool.black]
line-length = 99
