[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datacamp"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
bokeh = "3.2.2"
duckdb = "0.9.0"
duckdb-engine = "0.9.2"
ipykernel = "6.25.2"
jupysql = "0.10.2"
jupyter-ai = "2.2.0"
jupyterlab = "4.0.6"
jupyterlab-git = "0.43.0"
line-profiler = "4.1.1"
matplotlib = "3.8.0"
numpy = "1.26.0"
openai = "0.28.1"
pandas = "2.1.1"
pyarrow = "13.0.0"
pytest = "7.4.2"
python = ">=3.11.0 <3.12.0"
python-dateutil = "2.8.2"
scipy = "1.11.3"
sqlalchemy = "2.0.21"
toml = "0.10.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}

[tool.black]
line-length = 99
